# arabic-editorial-classifier

./: .gitignore  pyproject.toml
src/data/: ar_sample.xlsx  corpus_eda.py  corpus_stats.py  discover_url_patterns.py  extract_corpus.py  fetch_gdelt.py  fetch_gdelt_test.py  peek.py
