[project]
name = "arabic-editorial-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "datasketch>=1.10.0",
    "gdeltdoc>=1.12.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarabic>=0.6.15",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "trafilatura>=2.0.0",
    "transformers>=5.6.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
